# gpt-oss-k8s-gpu-inferencing

./: .gitignore  README.md  pyproject.toml
infrastructure/: README.md  main.tf  variables.tf
infrastructure/modules/aks/: main.tf  variables.tf
k8s/: README.md  gpt-oss-120b-deploy.yaml  gpt-oss-20b-deploy.yaml  gpt-oss-deploy.yaml  kuberay-operator-values.yaml
setup/: nvidia-device-plugin-ds.yaml
src/: _gptoss-test.http
src/gpt_oss_k8s_gpu_inferencing/: load_testing.py  questions.txt
